--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.start-button {
+#start-button {
   position: absolute;
   background-image: url("../images/play.png");
   background-repeat: no-repeat;
