--- a/styles/style.css
+++ b/styles/style.css
@@ -61,18 +61,91 @@ body {
 
 .samurai {
   position: absolute;
+  /* IDLE LEFT */
   top: 67.5%;
   left: 25.3%;
+  /* ATTACK LEFT */
+  /* top: 68.5%; */
+  /* left: 30%; */
+  /* ATTACK RIGHT */
+  /* top: 68.5%; */
+  /* left: 70%; */
   transform: translate(-50%, -50%);
   width: 260px;
   height: 188px;
 }
 /* END MENU */
 
-#game-container {
+#game-screen {
+  display: none;
+}
+
+.samurai_attack_left {
+  animation-name: attack_left;
+  animation-duration: 0.05s;
+}
+
+.samurai_attack_right {
+  animation-name: attack_right;
+  animation-duration: 0.05s;
+}
+
+@keyframes attack_left {
+  0% {
+    content: url("../images/character/left/attack_1_left.png");
+  }
+  14.28% {
+    content: url("../images/character/left/attack_2_left.png");
+  }
+  28.57% {
+    content: url("../images/character/left/attack_3_left.png");
+  }
+  42.86% {
+    content: url("../images/character/left/attack_4_left.png");
+  }
+  57.14% {
+    content: url("../images/character/left/attack_5_left.png");
+  }
+  71.43% {
+    content: url("../images/character/left/attack_6_left.png");
+  }
+  85.71% {
+    content: url("../images/character/left/attack_7_left.png");
+  }
+  100% {
+    content: url("../images/character/left/attack_0_left.png");
+  }
+}
+
+@keyframes attack_right {
+  0% {
+    content: url("../images/character/right/attack_1_right.png");
+  }
+  14.28% {
+    content: url("../images/character/right/attack_2_right.png");
+  }
+  28.57% {
+    content: url("../images/character/right/attack_3_right.png");
+  }
+  42.86% {
+    content: url("../images/character/right/attack_4_right.png");
+  }
+  57.14% {
+    content: url("../images/character/right/attack_5_right.png");
+  }
+  71.43% {
+    content: url("../images/character/right/attack_6_right.png");
+  }
+  85.71% {
+    content: url("../images/character/right/attack_7_right.png");
+  }
+  100% {
+    content: url("../images/character/right/attack_0_right.png");
+  }
 }
 
 #game-end {
+  display: none;
 }
 
 @media (max-width: 524px) {
